# slack-rs

./: .example.env  .gitignore  Cargo.toml  README.md
hurl/: create-answer.hurl  create-question.hurl  delete-answer.hurl  delete-question.hurl  get-answers.hurl  get-questions.hurl
scripts/: add-migration.sh  remove-migration.sh
src/: main.rs  models.rs
src/handlers/: handlers_inner.rs  mod.rs
src/persistance/: answers_dao.rs  questions_dao.rs  tests.rs
